# community-detection-via-neural-embedding

./: .gitignore  README.md  REPRODUCING.md  Snakefile  Snakefile_empirical.smk  Snakefile_lfr_files.smk  Snakefile_multipartition_files.smk  environment.yml  pyproject.toml  requirements.txt  utils.smk
libs/BeliefPropagation/: pyproject.toml  setup.py
libs/LFR-benchmark/: pyproject.toml
libs/embcom/: pyproject.toml
libs/embcom/embcom/: __init__.py  embeddings.py  utils.py
libs/embcom/tests/: test.py
workflow/community-detection/: birch-clustering.py  detect-community.py  potts-clustering.py  silhouette-kmeans.py  voronoi-clustering.py
workflow/community_detection/: detect_community.py  kmeans_clustering.py  silhouette_kmeans.py
workflow/embedding/: embedding.py
workflow/evaluation/: concatenate_results.py  log
workflow/net_generator/: .generate-net-by-multi-partition-model.py.swp  generate-empirical-network.py  generate-lfr-net.py  generate-net-by-multi-partition-model.py
workflow/plot/: color_palette.py  plot-mixing-vs-performance-lfr.py  plot-mixing-vs-performance.py  plot-performance-empirical-net.py  plot-spectral-density.py  plot_laplacian_loss_landscape.py  plot_mixing_vs_performance.py  plot_mixing_vs_performance_lfr.py  plot_modularity_loss_landscape.py  plot_performance_empirical_net.py  utils.py
workflow/rules/: empirical.smk  lfr.smk  multipartition.smk
workflow/scripts/: color_palette.py  concatenate_results.py  detect_community.py  embedding.py  eval_com_detect_score.py  generate_empirical_network.py  generate_lfr_net.py  generate_net_by_multi_partition_model.py  kmeans_clustering.py  pdf_nup.py  plot_mixing_vs_performance.py  plot_mixing_vs_performance_lfr.py  plot_performance_empirical_net.py  silhouette_kmeans.py  voronoi_clustering.py
workflow/spectral-density-analysis/: calc-spec-density-node2vec.py  utils.py
workflow/utils/: __init__.py  io.py  matrix.py  pdf_nup.py
